add text services

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                                 <i class="uil uil-github"></i>
                             </a>
 
-                            <a href="" class="home__social-icon">
+                            <a href="mailto:kalvin.sgb@outlook.com" class="home__social-icon">
                                 <i class="uil uil-envelope"></i>
                             </a>
                         </div>
@@ -110,7 +110,7 @@
                             <h1 class="home__title">👋 Hello,world !</h1><br>
                             <h3 class="home__subtitle">Developpeur web Front-end</h3>
                             <p class="home__description">Mon nom est Kalvin. Je suis un développeur junior
-                                basé sur Paris. Passionné de code,j'ai décidé d'en apprendre plus sur le développement web en rejoignant la DonkeySchool et d'en faire mon métier.
+                                basé sur Paris. Passionné de code,j'ai décidé d'en apprendre plus sur le développement web et d'en faire mon métier.
                             </p>
                             <a href="#contact" class="button button--flex">
                                 Contactez-moi<i class="uil uil-message button__icon"></i>
@@ -134,7 +134,7 @@
                 <span class="section__subtitle">Mon introduction</span>
                 <div class="about__container container grid">
                     <div class="about__data">
-                        <p class="about__description">Je souhaite devenir quelqu'un qui contribue à la conception de site et d'application web, qui influence la vie de nombreuses personnes.<br><br>
+                        <p class="about__description">Je souhaite devenir quelqu'un qui contribue à la conception de site et d'application web, qui influence la vie de nombreuses personnes. Ayant toujours eu un intérêt pour l'informatique et le développement, en 2021, j'ai décidé de rejoindre la DonkeySchool, une formation formant des développeurs capables de répondre aux exigences du marché professionnel actuel.<br><br>
                         En tant que développeur front-end, j'apprécie énormément la capacité à donner vie à la vision d'un client, ce qui est très gratifiant. J'éprouve une énorme satisfaction à voir un travail passer de l'idée à la conception, surtout lorsqu'il apparaît dans les mains de l'utilisateur.
                         </p>
                         <br>
@@ -152,7 +152,7 @@
                         </div>-->
 
                         <div class="about__buttons">
-                            <a download="" href="/assets/pdf/CV Kalvin Belony--Sagbo .pdf" class="button button--flex">
+                            <a download="" href="/assets/pdf/CV de Kalvin Belony--Sagbo .pdf" class="button button--flex">
                                 Télécharger mon CV<i class="uil uil-download-alt button__icon"></i>
                             </a>
                         </div>
@@ -241,11 +241,6 @@
                                         <h3 class="skills__name">MySQL</h3>
                                     </div><br>
 
-                                    <div class="skills__data">
-                                        <div class="skills__titles">
-                                            <h3 class="skills__name">Firebase</h3>
-                                        </div><br>
-                                </div>
                             </div>
                         </div></div></div>
                             </div>
@@ -403,14 +398,14 @@
             <!--==================== SERVICES ====================-->
             <section class="services section" id="services">
                 <h2 class="section__title">Services</h2>
-                <span class="section__subtitle">Compétence et services dont je dispose</span>
+                <span class="section__subtitle">Mes compétence et services</span>
 
                 <div class="services__container container grid">
                     <!--==================== SERVICES 1 ====================-->
                     <div class="services__content">
                         <div>
                             <i class="uil uil-web-grid services__icon"></i>
-                            <h3 class="services__title">Ui / Ux</h3>
+                            <h3 class="services__title">UI / UX</h3>
                         </div>
 
                         <span class="button button--flex button--small button--link services__button">
@@ -498,20 +493,16 @@
                                 <ul class="services__modal-services grid">
                                     <li class="services__modal-service">
                                         <i class="uil uil-check-circle service services__modal-icon"></i>
-                                        <p>I develop the user interface.</p>
+                                        <p>Utilisation de MySQLWorkbench</p>
                                     </li><br>
                                     <li class="services__modal-service">
                                         <i class="uil uil-check-circle service services__modal-icon"></i>
-                                        <p>Web page development.</p>
+                                        <p>Utilisation de Firebase</p>
                                     </li><br>
                                     <li class="services__modal-service">
                                         <i class="uil uil-check-circle service services__modal-icon"></i>
-                                        <p>I create ux element interactions.</p>
+                                        <p>Création de schéma de BDD pour une application</p>
                                     </li><br>
-                                    <li class="services__modal-service">
-                                        <i class="uil uil-check-circle service services__modal-icon"></i>
-                                        <p>I position your company brand.</p>
-                                    </li>
                                 </ul>
                             </div>
                         </div>
@@ -536,20 +527,16 @@
                                 <ul class="services__modal-services grid">
                                     <li class="services__modal-service">
                                         <i class="uil uil-check-circle service services__modal-icon"></i>
-                                        <p>Création </p>
+                                        <p>Travail en méthode Agile</p>
                                     </li><br>
                                     <li class="services__modal-service">
                                         <i class="uil uil-check-circle service services__modal-icon"></i>
-                                        <p>Web page development.</p>
+                                        <p> Travail en méthode SCRUM : user stories, backlogs et sprints.</p>
                                     </li><br>
                                     <li class="services__modal-service">
                                         <i class="uil uil-check-circle service services__modal-icon"></i>
-                                        <p>I create ux element interactions.</p>
+                                        <p>Esprit d'équipe</p>
                                     </li><br>
-                                    <li class="services__modal-service">
-                                        <i class="uil uil-check-circle service services__modal-icon"></i>
-                                        <p>I position your company brand.</p>
-                                    </li>
                                 </ul>
                             </div>
                         </div>
@@ -613,7 +600,7 @@
                             <div class="portofolio__data"><br>
                                 <h3 class="portofolio__title">Pokédex</h3>
                                 <p class="portofolio__description">Réalisation en Angular d’un Pokédex. Identité visuelle, utilisation d’API. Site réalisé en 2 semaines.</p>
-                                <a href="#" class="button button--flex button--small portofolio__button">
+                                <a href="https://github.com/Kbelony/Pokedex" class="button button--flex button--small portofolio__button">
                                     Demo
                                     <i class="uil uil-arrow-right button__icon"></i>
                                 </a>
@@ -670,7 +657,7 @@
 
                             <div>
                                 <h3 class="contact__title">Email</h3>
-                                <span class="contact__subtitle" a href="kalvin.sgb@outlook.com">kalvin.sgb@outlook.com</a></span>
+                                <span class="contact__subtitle" a href="mailto:kalvin.sgb@outlook.com">kalvin.sgb@outlook.com</a></span>
                             </div>
                         </div>
                         <div class="contact__information">
@@ -738,7 +725,7 @@
                         <a href="https://github.com/Kbelony" class="footer__social">
                             <i class="uil uil-github"></i>
                         </a>
-                        <a href="" class="footer__social">
+                        <a href="mailto:kalvin.sgb@outlook.com" class="footer__social">
                             <i class="uil uil-envelope"></i>
                         </a>
                     </div>
