--- a/index.html
+++ b/index.html
@@ -640,7 +640,7 @@
             <!--==================== CONTACT ME ====================-->
             <section class="contact section" id="contact">
                 <h2 class="section__title">Me contacter</h2>
-                <span class="section__subtitle">Get in touch</span>
+                <span class="section__subtitle">Prenez contact avec moi</span>
 
                 <div class="contact__container container grid">
                     <div>
