change color skills-arrows

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                         <div class="home__data">
                             <h1 class="home__title">👋 Hello,world !</h1><br>
                             <h3 class="home__subtitle">Developpeur web Front-end</h3>
-                            <p class="home__description">Mon nom est Kalvin. Je suis un développeur junior
+                            <p class="home__description">Mon nom est Kalvin. Je suis un jeune développeur de 19 ans
                                 basé sur Paris. Passionné de code,j'ai décidé d'en apprendre plus sur le développement web et d'en faire mon métier.
                             </p>
                             <a href="#contact" class="button button--flex">
