--- a/index.html
+++ b/index.html
@@ -415,7 +415,7 @@
 
                         <div class="services__modal">
                             <div class="services__modal-content">
-                                <h4 class="services__modal-title">Ui/Ux</h4>
+                                <h4 class="services__modal-title">UI / UX</h4>
                                 <i class="uil uil-times services__modal-close"></i>
 
                                 <ul class="services__modal-services grid">
@@ -438,12 +438,12 @@
                                 </ul>
                             </div>
                         </div>
-                    </div><br>
+                    </div>
                     <!--==================== SERVICES 2 ====================-->
                     <div class="services__content">
                         <div>
                             <i class="uil uil-arrow services__icon"></i>
-                            <h3 class="services__title">Compétence Front-end</h3>
+                            <h3 class="services__title">Front-end</h3>
                         </div>
 
                         <span class="button button--flex button--small button--link services__button">
@@ -472,7 +472,7 @@
                                 </ul>
                             </div>
                         </div>
-                    </div><br>
+                    </div>
                     <!--==================== SERVICES 3 ====================-->
                     <div class="services__content">
                         <div>
@@ -506,7 +506,7 @@
                                 </ul>
                             </div>
                         </div>
-                    </div><br>
+                    </div>
                     <!--==================== SERVICES 4 ====================-->
                     <div class="services__content">
                         <div>
