fix text Devéloppeur web et web mobile

--- a/index.html
+++ b/index.html
@@ -108,9 +108,9 @@
 
                         <div class="home__data">
                             <h1 class="home__title">👋 Hello,world !</h1><br>
-                            <h3 class="home__subtitle">Developpeur web Front-end</h3>
+                            <h3 class="home__subtitle">Devéloppeur web et web mobile</h3>
                             <p class="home__description">Mon nom est Kalvin. Je suis un jeune développeur de 19 ans
-                                basé sur Paris. Passionné de code,j'ai décidé d'en apprendre plus sur le développement web et d'en faire mon métier.
+                                basé sur Paris. Passionné de code, j'ai décidé d'en apprendre plus sur le développement web et d'en faire mon métier.
                             </p>
                             <a href="#contact" class="button button--flex">
                                 Contactez-moi<i class="uil uil-message button__icon"></i>
@@ -703,7 +703,7 @@
                 <div class="footer__container container grid">
                     <div>
                         <h1 class="footer__title">Kalvin</h1>
-                        <span class="footer__subtitle">Frontend développeur</span>
+                        <span class="footer__subtitle">Devéloppeur web et web mobile</span>
                     </div>
 
                     <ul class="footer__links">
